[TRD-478] change URL definition